--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "ext-curl": "*",
     "ext-simplexml": "*",
     "twig/twig": "^3.3",
-    "symfony/http-foundation": "^5.2"
+    "symfony/http-foundation": "^5.2",
+    "symfony/yaml": "^5.2"
 
   },
   "autoload": {
